// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OptionList /> should render a basic option list 1`] = `
<React.Fragment>
  <styled.button
    hidden={false}
    key="0"
    onClick={[Function]}
  >
    <span
      className="left-component"
    >
      <img
        src="https://github.com/markjames/famfamfam-flag-icons/blob/master/icons/png/ge.png?raw=true"
      />
    </span>
    Georgia Lari (GEL)
  </styled.button>
  <styled.button
    hidden={false}
    key="1"
    onClick={[Function]}
    selected={true}
  >
    <span
      className="left-component"
    >
      <img
        src="https://github.com/markjames/famfamfam-flag-icons/blob/master/icons/png/my.png?raw=true"
      />
    </span>
    Malaysia Ringgit (MYR)
  </styled.button>
  <styled.button
    hidden={false}
    key="2"
    onClick={[Function]}
  >
    <span
      className="left-component"
    >
      <img
        src="https://github.com/markjames/famfamfam-flag-icons/blob/master/icons/png/nz.png?raw=true"
      />
    </span>
    New Zealand Dollar (NZD)
  </styled.button>
  <styled.button
    hidden={false}
    key="3"
    onClick={[Function]}
  >
    <span
      className="left-component"
    >
      <img
        src="https://github.com/markjames/famfamfam-flag-icons/blob/master/icons/png/au.png?raw=true"
      />
    </span>
    Australian Dollar (AUD)
    <span
      className="right-component"
    >
      <FontAwesomeIcon
        type="star"
      />
    </span>
  </styled.button>
</React.Fragment>
`;

exports[`<OptionList /> should render an option list with filtered options 1`] = `
<React.Fragment>
  <styled.button
    hidden={true}
    key="0"
    onClick={[Function]}
  >
    <span
      className="left-component"
    >
      <img
        src="https://github.com/markjames/famfamfam-flag-icons/blob/master/icons/png/ge.png?raw=true"
      />
    </span>
    Georgia Lari (GEL)
  </styled.button>
  <styled.button
    hidden={true}
    key="1"
    onClick={[Function]}
    selected={true}
  >
    <span
      className="left-component"
    >
      <img
        src="https://github.com/markjames/famfamfam-flag-icons/blob/master/icons/png/my.png?raw=true"
      />
    </span>
    Malaysia Ringgit (MYR)
  </styled.button>
  <styled.button
    hidden={false}
    key="2"
    onClick={[Function]}
  >
    <span
      className="left-component"
    >
      <img
        src="https://github.com/markjames/famfamfam-flag-icons/blob/master/icons/png/nz.png?raw=true"
      />
    </span>
    New Zealand Dollar (NZD)
  </styled.button>
  <styled.button
    hidden={false}
    key="3"
    onClick={[Function]}
  >
    <span
      className="left-component"
    >
      <img
        src="https://github.com/markjames/famfamfam-flag-icons/blob/master/icons/png/au.png?raw=true"
      />
    </span>
    Australian Dollar (AUD)
    <span
      className="right-component"
    >
      <FontAwesomeIcon
        type="star"
      />
    </span>
  </styled.button>
</React.Fragment>
`;
